--- a/modules/users/client/views/admin/view-user.client.view.html
+++ b/modules/users/client/views/admin/view-user.client.view.html
@@ -18,13 +18,8 @@
   <div class="row">
     <div class="col-md-8">
       <div class="row">
-        <div class="col-md-3"><strong>First Name</strong></div>
+        <div class="col-md-3"><strong>Vorname</strong></div>
         <div class="col-md-6" ng-bind="user.firstName"></div>
-      </div>
-      <hr/>
-      <div class="row">
-        <div class="col-md-3"><strong>Last Name</strong></div>
-        <div class="col-md-6" ng-bind="user.lastName"></div>
       </div>
       <hr/>
       <div class="row">
@@ -33,17 +28,12 @@
       </div>
       <hr/>
       <div class="row">
-        <div class="col-md-3"><strong>Provider</strong></div>
-        <div class="col-md-6" ng-bind="user.provider"></div>
-      </div>
-      <hr/>
-      <div class="row">
-        <div class="col-md-3"><strong>Created</strong></div>
+        <div class="col-md-3"><strong>Erstelldatum</strong></div>
         <div class="col-md-6" ng-bind="user.created"></div>
       </div>
       <hr/>
       <div class="row">
-        <div class="col-md-3"><strong>Roles</strong></div>
+        <div class="col-md-3"><strong>Rolle</strong></div>
         <div class="col-md-6" ng-bind="user.roles"></div>
       </div>
     </div>
