--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -5,21 +5,21 @@
       <fieldset>
         <div class="form-group" show-errors>
           <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Username" lowercase required>
+          <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Username" required>
           <div ng-messages="userForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Username is required.</p>
+            <p class="help-block error-text" ng-message="required">Username wird benötigt.</p>
           </div>
         </div>
         <div class="form-group" show-errors>
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password" required>
+          <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Passwort" required>
           <div ng-messages="userForm.password.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Password is required.</p>
+            <p class="help-block error-text" ng-message="required">Passwort wird benötigt.</p>
           </div>
         </div>
         <div class="text-center form-group">
           <button type="submit" class="btn btn-primary">Einloggen</button>
-          &nbsp; or&nbsp;
+          &nbsp; oder&nbsp;
           <a ui-sref="authentication.signup">Registrieren</a>
         </div>
         <div class="text-center forgot-password">
