--- a/modules/users/client/views/settings/edit-profile.client.view.html
+++ b/modules/users/client/views/settings/edit-profile.client.view.html
@@ -10,25 +10,25 @@
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="lastName">Nachname</label>
-          <input type="text" id="lastName" name="lastName" class="form-control" ng-model="user.lastName" placeholder="Nachname" required>
-          <div ng-messages="userForm.lastName.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Last name is required.</p>
-          </div>
-        </div>
-        <div class="form-group" show-errors>
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control" ng-model="user.email" placeholder="Email" lowercase required>
+          <input type="email" id="email" name="email" class="form-control" ng-model="user.email" placeholder="Email" required>
           <div ng-messages="userForm.email.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Email address is required.</p>
-            <p class="help-block error-text" ng-message="email">Email address is invalid.</p>
+            <p class="help-block error-text" ng-message="required">Email wird benötigt.</p>
+            <p class="help-block error-text" ng-message="email">Email ist ungültig.</p>
           </div>
         </div>
         <div class="form-group" show-errors>
           <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="user.username" placeholder="Username" lowercase required>
+          <input type="text" id="username" name="username" class="form-control" ng-model="user.username" placeholder="Username" required>
           <div ng-messages="userForm.username.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Username is required.</p>
+            <p class="help-block error-text" ng-message="required">Username wird benötigt.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <label for="steamprofile">Steamprofil</label>
+          <input type="text" id="steamprofile" name="steamprofile" class="form-control" ng-model="user.steamprofile" placeholder="Steamprofil" required>
+          <div ng-messages="userForm.steamprofile.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Steamprofil wird benötigt.</p>
           </div>
         </div>
         <div class="text-center form-group">
