--- a/modules/users/client/views/admin/view-user.client.view.html
+++ b/modules/users/client/views/admin/view-user.client.view.html
@@ -33,6 +33,11 @@
       </div>
       <hr/>
       <div class="row">
+        <div class="col-md-3"><strong>Steamprofil-Link</strong></div>
+        <div class="col-md-6" ng-bind="user.steamprofile"></div>
+      </div>
+      <hr/>
+      <div class="row">
         <div class="col-md-3"><strong>Rolle</strong></div>
         <div class="col-md-6" ng-bind="user.roles"></div>
       </div>
