--- a/modules/users/client/views/settings/edit-profile.client.view.html
+++ b/modules/users/client/views/settings/edit-profile.client.view.html
@@ -25,10 +25,10 @@
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="steamprofile">Steamprofil</label>
-          <input type="text" id="steamprofile" name="steamprofile" class="form-control" ng-model="user.steamprofile" placeholder="Steamprofil" required>
+          <label for="steamprofile">Steamprofil-Link</label>
+          <input type="text" id="steamprofile" name="steamprofile" class="form-control" ng-model="user.steamprofile" placeholder="Steamprofil-Link" required>
           <div ng-messages="userForm.steamprofile.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Steamprofil wird benötigt.</p>
+            <p class="help-block error-text" ng-message="required">Steamprofil-Link wird benötigt.</p>
           </div>
         </div>
         <div class="text-center form-group">
