fixed date selector on signup

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a ui-sref="home" class="navbar-brand">L.O.V.E.</a>
+    <a ui-sref="home" class="navbar-brand">Freie Liebe</a>
   </div>
   <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
     <ul class="nav navbar-nav" ng-if="menu.shouldRender(authentication.user);">
@@ -47,7 +47,7 @@
           </li>
           <li class="divider"></li>
           <li>
-            <a href="/api/auth/signout" target="_self">Ausloggem</a>
+            <a href="/api/auth/signout" target="_self">Ausloggen</a>
           </li>
         </ul>
       </li>
