--- a/modules/core/client/less/core.less
+++ b/modules/core/client/less/core.less
@@ -48,6 +48,12 @@ body {
         padding-bottom: 5px;
       }
     }
+
+    .user-header-dropdown-toggle{
+      .divider {
+        color: @mainColor;
+      }
+    }
   }
 //     .row {
 //         padding-bottom: 20px;
