--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>User <span ng-bind="user.username"></span></h1>
+    <h1>Nutzer <span ng-bind="user.username"></span> bearbeiten</h1>
   </div>
   <div class="col-md-12">
     <form name="userForm" ng-submit="update(userForm.$valid)" novalidate>
@@ -13,16 +13,39 @@
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label class="control-label" for="roles">Rolle</label>
+          <label class="control-label" for="roles">Administrationslevel</label>
           <div class="controls">
-            <input class="form-control" type="text" name="roles" ng-model="user.roles" id="roles" ng-list required />
+              <ui-select ng-model="user.selectedRole" name="clanrang">
+                <ui-select-match placeholder="Rolle auswählen...">{{user.roles[0]}}</ui-select-match>
+                <ui-select-choices repeat="role in roles track by $index">
+                  <span ng-bind="role"></span>
+                </ui-select-choices>
+              </ui-select>
+              <div ng-messages="userForm.clanrang.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Ein Clanrang wird benötigt.</p>
+              </div>
             <div ng-messages="userForm.roles.$error" role="alert">
-              <p class="help-block error-text" ng-message="required">Mindestens 1 Rolle wird benötigt.</p>
+              <p class="help-block error-text" ng-message="required">Eine Rolle wird benötigt.</p>
             </div>
           </div>
         </div>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="clanrang">Clanrang</label>
+          <div class="controls">
+            <ui-select ng-model="user.selectedRang" name="clanrang">
+              <ui-select-match placeholder="Clanrang auswählen...">{{user.clanrang[0]}}</ui-select-match>
+              <ui-select-choices repeat="rang in clanrangs track by $index">
+                <span ng-bind="rang"></span>
+              </ui-select-choices>
+            </ui-select>
+            <div ng-messages="userForm.clanrang.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Ein Clanrang wird benötigt.</p>
+            </div>
+          </div>
+        </div>
+
         <div class="form-group">
-          <input type="submit" value="Update" class="btn btn-default">
+          <input type="submit" value="Speichern" class="btn btn-default">
         </div>
         <div ng-show="error" class="text-danger">
           <strong ng-bind="error"></strong>
