--- a/modules/users/client/views/admin/list-users.client.view.html
+++ b/modules/users/client/views/admin/list-users.client.view.html
@@ -2,20 +2,19 @@
   <div class="page-header">
     <div class="row">
       <div class="col-md-4">
-        <h1>Users</h1>
+        <h1>Mitglieder</h1>
       </div>
-      <div class="col-md-4" style="margin-top: 2em">
-        <input class="form-control col-md-4" type="text" ng-model="search" placeholder="Search" ng-change="figureOutItemsToDisplay()" />
+      <div class="col-md-offset-4 col-md-4" style="margin-top: 2em">
+        <input class="form-control col-md-4" type="text" ng-model="search" placeholder="Suche" ng-change="figureOutItemsToDisplay()" />
       </div>
     </div>
   </div>
   <div class="list-group">
     <a ng-repeat="user in pagedItems" ui-sref="admin.user({userId: user._id})" class="list-group-item">
-      <h4 class="list-group-item-heading" ng-bind="user.username"></h4>
-      <p class="list-group-item-text pull-right small" ng-bind="user.roles"></p>
+      <h4 class="list-group-item-heading" ng-bind="user.username +' - '+ user.firstName +' ('+ user.clanrang+')'"></h4>
       <p class="list-group-item-text" ng-bind="user.email"></p>
     </a>
   </div>
 
-  <pagination boundary-links="true" max-size="8" items-per-page="itemsPerPage" total-items="filterLength" ng-model="currentPage" ng-change="pageChanged()"></pagination>
+  <pagination boundary-links="true" max-size="8" items-per-page="itemsPerPage" total-items="filterLength" ng-model="currentPage" ng-change="pageChanged()" next-text="weiter" last-text="letzte" previous-text="zurück" first-text="erste"></pagination>
 </section>
