--- a/modules/news/client/views/view-news.client.view.html
+++ b/modules/news/client/views/view-news.client.view.html
@@ -15,7 +15,7 @@
   <small>
     <em class="text-muted">
       Erstellt am
-      <span ng-bind="vm.news.created | date:'mediumDate'"></span>
+      <span ng-bind="vm.news.created | date:'dd.MM.yyyy'"></span>
       von
       <span ng-if="vm.news.user"
             ng-bind="vm.news.user.displayName"></span>
