--- a/modules/core/client/views/403.client.view.html
+++ b/modules/core/client/views/403.client.view.html
@@ -1,6 +1,6 @@
-<h1>Forbidden</h1>
+<h1>Kein Zutritt</h1>
 <div class="alert alert-danger" role="alert">
   <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   <span class="sr-only">Error:</span>
-  You are not authorized to access this resource
+  Sie besitzen keine Rechte diese Seite zu sehen. Bitte kontaktiere den Leader der Freien Liebe.
 </div>
