--- a/modules/core/client/views/404.client.view.html
+++ b/modules/core/client/views/404.client.view.html
@@ -1,5 +1,5 @@
-<h1>Page Not Found</h1>
+<h1>Die Seite wurde leider nicht gefunden</h1>
 <div class="alert alert-danger" role="alert">
   <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-  <span class="sr-only">Error:</span> Page Not Found
+  <span class="sr-only">Error:</span> Leider wurde die Seite nicht gefunden. Kontaktiere den Webmaster.
 </div>
