--- a/modules/users/client/less/user.detail.less
+++ b/modules/users/client/less/user.detail.less
@@ -2,6 +2,8 @@
   .content{
     background-color: white;
     margin-left: 15px;
+    border-radius: 5px;
+    
     .row{
       &:first-child {
         margin-top: 20px;
