new content and rhich text editor

--- a/modules/news/client/views/form-news.client.view.html
+++ b/modules/news/client/views/form-news.client.view.html
@@ -13,6 +13,7 @@
           </div>
         </div>
         <div class="form-group">
+          <text-angular ng-model="vm.news.content"></text-angular>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.news._id ? 'Update' : 'Erstellen'}}</button>
