--- a/modules/news/client/views/view-news.client.view.html
+++ b/modules/news/client/views/view-news.client.view.html
@@ -22,5 +22,5 @@
       <span ng-if="!vm.news.user">Deleted User</span>
     </em>
   </small>
-  <p class="lead" ng-bind="vm.news.content"></p>
+  <div ta-bind ng-model="vm.news.content"></div>
 </section>
