--- a/modules/core/client/less/core.less
+++ b/modules/core/client/less/core.less
@@ -82,7 +82,19 @@ body {
       color: @mainColor;
       background-color: transparent;
     }
-  }
+    .ta-toolbar {
+      .btn-default.disabled, .btn-default[disabled], fieldset[disabled] .btn-default, .btn-default.disabled:hover, .btn-default[disabled]:hover, fieldset[disabled] .btn-default:hover, .btn-default.disabled:focus, .btn-default[disabled]:focus, fieldset[disabled] .btn-default:focus, .btn-default.disabled.focus, .btn-default[disabled].focus, fieldset[disabled] .btn-default.focus, .btn-default.disabled:active, .btn-default[disabled]:active, fieldset[disabled] .btn-default:active, .btn-default.disabled.active, .btn-default[disabled].active, fieldset[disabled] .btn-default.active{
+          background-color: white;
+          opacity: 1;
+      }
+    }
+
+    .list-preview {
+      background-color: white;
+      border-radius: 5px;
+      padding: 20px;
+    }
+   }
 //     .row {
 //         padding-bottom: 20px;
 //         .label-success {
