--- a/modules/news/client/views/view-news.client.view.html
+++ b/modules/news/client/views/view-news.client.view.html
@@ -2,8 +2,9 @@
   <div class="page-header">
     <h1 ng-bind="vm.news.name"></h1>
   </div>
+  {{vm.canEdit}}
   <div class="pull-right"
-       ng-show="vm.news.isCurrentUserOwner">
+       ng-show="vm.canEdit">
     <a class="btn btn-primary"
        ui-sref="news.edit({ newsId: vm.news._id })">
       <i class="glyphicon glyphicon-edit"></i>
