body background fix on long pages

--- a/modules/core/client/less/core.less
+++ b/modules/core/client/less/core.less
@@ -8,7 +8,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     overflow-y: scroll;
     padding-top: 70px;
@@ -43,7 +43,7 @@ body {
       background-image:linear-gradient(to bottom, @mainColor 0%, @mainColor 100%);
       border-color: @mainColor;
     }
-    
+
     .page-header{
       padding-bottom: inherit;
       border-bottom: 1px solid @mainColor;
