--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -4,7 +4,7 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   overflow-y: scroll;
   padding-top: 70px;
