--- a/modules/core/client/less/core.less
+++ b/modules/core/client/less/core.less
@@ -8,7 +8,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     overflow-y: scroll;
     padding-top: 70px;
@@ -99,6 +99,11 @@ body {
       background-color: white;
       border-radius: 5px;
       padding: 20px;
+      max-height: 80vh;
+      overflow-y: scroll;
+      img{
+        max-height: 300px;
+      }
     }
 
     .top-nav{
